spring-boot-kafka-consumer/k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sb-kafka-service
  labels:
    app: sb-kafka-service
spec:
  ports:
  - name: sb-kafka-service
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: spkafkaapplication
  type: ClusterIP
