spring-boot-kafka-consumer/k8s/app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sb-kafka-producer-ingress
  namespace: kafka
spec:
  rules:
  - host: demo-sb-kafka.app.dev.s2m.ma
    http:
      paths:
      - backend:
          serviceName: sb-kafka-service
          servicePort: 8080
        path: /
